--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>재물조사 웹앱</title>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <script src="https://unpkg.com/html5-qrcode"></script>
 </head>
 <body>
@@ -92,5 +92,8 @@
       });
     }
   </script>
+</body>
+</html>
+
 </body>
 </html>
