--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <script>
     let scannedCode = "";
     let staffId = "";
+    let scanner;  // 전역변수로 스캐너 인스턴스 저장
     const endpoint = "https://script.google.com/macros/s/AKfycbw82Gi8YXuFKTDhrmats5YSwQHFud-qiMObqYMOM4An9bEw7g1xllWt6cxS9nntaeGZcg/exec";
 
     function startScan() {
@@ -38,12 +39,13 @@
       document.getElementById("setup").style.display = "none";
       document.getElementById("scanner").style.display = "block";
 
-      const scanner = new Html5QrcodeScanner("reader", { fps: 10, qrbox: 250 });
+      scanner = new Html5QrcodeScanner("reader", { fps: 10, qrbox: 250 });
       scanner.render(onScanSuccess);
     }
 
     function onScanSuccess(decodedText) {
       scannedCode = decodedText;
+
       fetch(endpoint, {
         method: "POST",
         body: JSON.stringify({ code: scannedCode, staffId }),
@@ -53,20 +55,24 @@
       .then(data => {
         if (data.status === "error") {
           alert("❌ 오류: " + data.message);
+          scanner.clear();  // 초기화
           return;
         }
         if (data.status === "same") {
           alert("✅ 위치 동일, 기록 생략됨");
+          scanner.clear();  // 초기화
           return;
         }
         if (data.status === "updated") {
           alert("✅ 위치 변경 기록 완료");
+          scanner.clear();  // 초기화
           return;
         }
         if (data.status === "show") {
           document.getElementById("assetInfo").innerHTML =
             `<b>자산명:</b> ${data.asset}<br><b>기존 위치:</b> ${data.originalLocation}<br><br>현재 위치가 다르면 아래에 입력하세요.`;
           document.getElementById("locationInput").style.display = "block";
+          scanner.clear();  // 스캔 멈춤 - 위치 입력 대기
         }
       });
     }
@@ -89,11 +95,9 @@
         document.getElementById("assetInfo").innerText = "";
         document.getElementById("locationInput").style.display = "none";
         document.getElementById("newLocation").value = "";
+        scanner.render(onScanSuccess);  // 위치 기록 후 다시 스캔 시작
       });
     }
   </script>
-</body>
-</html>
-
 </body>
 </html>
